修正：上下對齊、RWD封面、多餘class、色碼變數

--- a/stylesheets/helpers/_utilities.scss
+++ b/stylesheets/helpers/_utilities.scss
@@ -763,7 +763,8 @@ $utilities: map-merge(
       class: bgp,
       values: (
         center: center center,
-        bottom: center bottom,
+        bottom: bottom center,
+        top: top center,
       ),
     ),
     "background-attachment": (
