--- a/stylesheets/pages/_product.scss
+++ b/stylesheets/pages/_product.scss
@@ -2,7 +2,7 @@
 @import "../utils/function";
 @import "../helpers/variables";
 
-// 雖然有加上active 但若權重不足 可能導致失效 加上&增加權重 不使用 ~ 可能沒有支援
+// 雖然有加上active 但若權重不足 可能導致失效 加上&增加權重 不使用 ~ 可能沒有支援(是代表你寫錯了)
 .aside {
   a {
     color: $pickBlack;
