新增：燈箱icon 增加提示

--- a/stylesheets/pages/_index.scss
+++ b/stylesheets/pages/_index.scss
@@ -110,7 +110,7 @@
 //   display: flex;
 // }
 .love_img_back {
-  // 可用BS提供的SVG圖 但關機BUG而載圖
+  // 可用BS提供的SVG圖 但關機才出現圖的BUG而載了別的圖
   background-image: url("../nbaWeb/Minimal-Magnifying-Glass.svg");
   width: 150px;
   height: 150px;
