--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -17,7 +17,7 @@
 @import "../node_modules/bootstrap/scss/type";
 //內建常用
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css"; //內建icon
-@import "bootstrap-icons.css"; //內建icon
+@import "./bootstrap-icons.css"; //內建icon
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
