--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
-@import "bootstrap-icons.css";
+@import "./bootstrap-icons.css";
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
 @import "./lightbox.min.css";
